--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 <div class="main">
   <div class="title">
     <h3>Image Classifier</h3>
-    <!-- <p>
-      <small>A web app demo</small>
-    </p> -->
+    <p align="center">
+      <small>Made by Avik</small>
+    </p>
   </div>
 
   <div class="panel">
